--- a/projects/ToyProjects/education/index.html
+++ b/projects/ToyProjects/education/index.html
@@ -11,13 +11,8 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
     <!-- GOOGLE FONTS (MONTSERRAT) -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap">
 
     <!-- SWIPER JS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
@@ -31,7 +26,7 @@
     <nav>
         <div class="container nav__container">
             <a href="index.html">
-                <h4>SOLIDRAW</h4>
+                <h4 class="title">SOLI<span class="title__draw">DRAW</span></h4>
             </a>
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
@@ -47,13 +42,14 @@
     <header>
         <div class="container header__container">
             <div class="header__left">
-                <h1>Grow your skills to advance your career path</h1>
+                <h1>핸드드로우를,<br>
+                    완벽한 솔리드로우로!<br>
+                    지금 설계 시간을 줄여보세요</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing
-                    elit. Magni repellat similique commodi. Tempora,
-                    sed quo similique voluptate.
+                    여러분의 러프 스케치를 완벽한 도면으로 만들어줍니다.<br>
+                    아래의 버튼을 눌러 지금 바로 변환해보세요.
                 </p>
-                <a href="courses.html" class="btn btn-primary">Get Started</a>
+                <a href="courses.html" class="btn btn-primary">Convert Now</a>
             </div>
             <div class="header__right">
                 <div class="header__right-image">
@@ -67,13 +63,13 @@
     <section class="categories">
         <div class="container categories__container">
             <div class="categories__left">
-                <h1>Categories</h1>
+                <h1>카테고리</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos dicta voluptatum
                     veniam laudantium deleniti quo similique optio illum tempore. Deserunt, molestias.
                     Dicta quisquam sapiente cupiditate corporis. Dicta autem repellendus sapiente?
                 </p>
-                <a href="#" class="btn">Learn More</a>
+                <a href="#" class="btn">더 알아보기</a>
             </div>
             <div class="categories__right">
                 <article class="category">
@@ -141,7 +137,7 @@
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus doloremque
                         quae velit, facilis reiciendis excepturi.
                     </p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="course.html" class="btn btn-primary">자세히 보기</a>
                 </div>
             </article>
 
@@ -155,7 +151,7 @@
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus doloremque
                         quae velit, facilis reiciendis excepturi.
                     </p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="course.html" class="btn btn-primary">자세히 보기</a>
                 </div>
             </article>
 
@@ -169,7 +165,7 @@
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus doloremque
                         quae velit, facilis reiciendis excepturi.
                     </p>
-                    <a href="course.html" class="btn btn-primary">Learn More</a>
+                    <a href="course.html" class="btn btn-primary">자세히 보기</a>
                 </div>
             </article>
         </div>
@@ -177,23 +173,12 @@
     <!-- =================== END Of COURSES ====================== -->
 
     <section class="faqs">
-        <h2>Frequently Asked Questions</h2>
+        <h2>자주 묻는 질문들</h2>
         <div class="container faqs__container">
             <article class="faq">
                 <div class="faq__icon"><i class="uil uil-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me?</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod vel quis perferendis
-                        porro excepturi eum sint esse enim, cupiditate quam minima consectetur repellat rerum
-                        voluptatibus quae quibusdam beatae dolorem!
-                    </p>
-                </div>
-            </article>
-            <article class="faq open">
-                <div class="faq__icon"><i class="uil uil-plus"></i></div>
-                <div class="question__answer">
-                    <h4>How do I know the right courses for me?</h4>
+                    <h4>어떻게 사용하나요?</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod vel quis perferendis
                         porro excepturi eum sint esse enim, cupiditate quam minima consectetur repellat rerum
@@ -204,7 +189,7 @@
             <article class="faq">
                 <div class="faq__icon"><i class="uil uil-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me?</h4>
+                    <h4>솔리드로우의 작동 원리는 무엇인가요?</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod vel quis perferendis
                         porro excepturi eum sint esse enim, cupiditate quam minima consectetur repellat rerum
@@ -215,7 +200,7 @@
             <article class="faq">
                 <div class="faq__icon"><i class="uil uil-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me?</h4>
+                    <h4>컨버팅 중 오류가 발생합니다!</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod vel quis perferendis
                         porro excepturi eum sint esse enim, cupiditate quam minima consectetur repellat rerum
@@ -226,7 +211,7 @@
             <article class="faq">
                 <div class="faq__icon"><i class="uil uil-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me?</h4>
+                    <h4>변환 개수 제한이 있나요?</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod vel quis perferendis
                         porro excepturi eum sint esse enim, cupiditate quam minima consectetur repellat rerum
@@ -237,7 +222,18 @@
             <article class="faq">
                 <div class="faq__icon"><i class="uil uil-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me?</h4>
+                    <h4>변환된 도면이 마음에 들지 않아요!</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod vel quis perferendis
+                        porro excepturi eum sint esse enim, cupiditate quam minima consectetur repellat rerum
+                        voluptatibus quae quibusdam beatae dolorem!
+                    </p>
+                </div>
+            </article>
+            <article class="faq">
+                <div class="faq__icon"><i class="uil uil-plus"></i></div>
+                <div class="question__answer">
+                    <h4>어쩌고 저쩌고 대충 질문 문장이 들어가요</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod vel quis perferendis
                         porro excepturi eum sint esse enim, cupiditate quam minima consectetur repellat rerum
@@ -272,14 +268,14 @@
     <!-- ====================== END OF QNA ===================== -->
 
     <section class="container testimonials__container mySwiper">
-        <h2>Students' Testmonials</h2>
+        <h2>직접듣는 사용 후기</h2>
         <div class="swiper-wrapper">
             <article class="testimonial swiper-slide">
                 <div class="avatar">
-                    <img src="./images/avatar1.jpg" alt="">
+                    <img src="./images/avatars/dongho-shin.jpg" alt="">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Dongho Shin</h5>
+                    <h5>신동호</h5>
                     <small>Student</small>
                 </div>
                 <div class="testimonial__body">
@@ -292,10 +288,10 @@
 
             <article class="testimonial swiper-slide">
                 <div class="avatar">
-                    <img src="./images/avatar2.jpg" alt="">
+                    <img src="./images/avatars/doyoung-kim.png" alt="">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Doyoung Kim</h5>
+                    <h5>김도영</h5>
                     <small>Backend Developer</small>
                 </div>
                 <div class="testimonial__body">
@@ -308,10 +304,10 @@
 
             <article class="testimonial swiper-slide">
                 <div class="avatar">
-                    <img src="./images/avatar3.jpg" alt="">
+                    <img src="./images/avatars/dayeon-son.jpg" alt="">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Dayeon Son</h5>
+                    <h5>손다연</h5>
                     <small>Govern Engineer</small>
                 </div>
                 <div class="testimonial__body">
@@ -324,11 +320,11 @@
 
             <article class="testimonial swiper-slide">
                 <div class="avatar">
-                    <img src="./images/avatar4.jpg" alt="">
+                    <img src="./images/avatars/junghyeon-heo.png" alt="">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Youngje Lim</h5>
-                    <small>Lab Slave</small>
+                    <h5>허정현</h5>
+                    <small>IPP Slave</small>
                 </div>
                 <div class="testimonial__body">
                     <p>
@@ -340,10 +336,10 @@
 
             <article class="testimonial swiper-slide">
                 <div class="avatar">
-                    <img src="./images/avatar5.jpg" alt="">
+                    <img src="./images/avatars/hanyoung-yoon.png" alt="">
                 </div>
                 <div class="testimonial__info">
-                    <h5>Hanyoung Yoon</h5>
+                    <h5>윤한영</h5>
                     <small>Frontend Devloper</small>
                 </div>
                 <div class="testimonial__body">
