--- a/projects/ToyProjects/education/about.html
+++ b/projects/ToyProjects/education/about.html
@@ -22,6 +22,7 @@
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./animations.css">
+    <link rel="stylesheet" href="./about.css">
 </head>
 
 <body>
@@ -41,7 +42,143 @@
         </div>
     </nav>
     <!-- ==================================== END OF NAVBAR ================================-->
-    .achive
+    <section class="about__achievements">
+        <div class="container about__achievements-container">
+            <div class="about__achievements-left">
+                <img src="./images/about achievements.svg" alt="">
+            </div>
+            <div class="about__achievements-right">
+                <h1>Achievements</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequatur eaque beatae rerum nobis assumenda maiores tempore,
+                    sed sint vel, similique aperiam laborum illo aliquid eum officia
+                    quidem magni voluptas dolores.
+                </p>
+                <div class="achievements__cards">
+                    <article class="achievement__card">
+                        <span class="achievement__icon"><i class="uil uil-video"></i></span>
+                        <h3>450+</h3>
+                        <p>Courses</p>
+                    </article>
+                    <article class="achievement__card">
+                        <span class="achievement__icon"><i class="uil uil-users-alt"></i></span>
+                        <h3>79,000+</h3>
+                        <p>Students</p>
+                    </article>
+                    <article class="achievement__card">
+                        <span class="achievement__icon"><i class="uil uil-trophy"></i></span>
+                        <h3>26</h3>
+                        <p>Awards</p>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =================================== END OF ACHIEVEMENTS ================================= -->
+    <section class="team">
+        <h2>Meet Our Team</h2>
+        <div class="container team__container">
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm1.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Dongho Shin</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="#"><i class="uil uil-instagram"></i></a>
+                    <a href="#"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                </div>
+            </article>
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm2.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Dongho Shin</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="#"><i class="uil uil-instagram"></i></a>
+                    <a href="#"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                </div>
+            </article>
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm3.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Dongho Shin</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="#"><i class="uil uil-instagram"></i></a>
+                    <a href="#"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                </div>
+            </article>
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm4.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Dongho Shin</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="#"><i class="uil uil-instagram"></i></a>
+                    <a href="#"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                </div>
+            </article>
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm5.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Dongho Shin</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="#"><i class="uil uil-instagram"></i></a>
+                    <a href="#"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                </div>
+            </article>
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm6.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Dongho Shin</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="#"><i class="uil uil-instagram"></i></a>
+                    <a href="#"><i class="uil uil-twitter-alt"></i></a>
+                    <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                </div>
+            </article>
+            <article class="team__member">
+                <div class="team__member-image">
+                    <img src="./images/tm7.jpg" alt="">
+                </div>
+                <div class="team__member-info">
+                    <h4>Dongho Shin</h4>
+                    <p>Expert Tutor</p>
+                </div>
+                <div class="team__member-socials">
+                    <a href="#"><i class="uil uil-instagram"></i></a>
+                    <a href="#"><i class="uil uil-twitter-alt"></i></a>
+                </div>
+            </article>
+        </div>
+    </section>
+    <!-- ================================== END OF TEAM =============================== -->
     <footer>
         <div class="container footer__container">
             <div class="footer__1">
