solidraw test pages

--- a/projects/ToyProjects/education/index.html
+++ b/projects/ToyProjects/education/index.html
@@ -403,6 +403,7 @@
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="./main.js"></script>
+    <script src="./convert.js"></script>
     <!-- SWIPER INITAILIZE -->
     <script>
         var swiper = new Swiper(".mySwiper", {
