--- a/projects/ToyProjects/education/index.html
+++ b/projects/ToyProjects/education/index.html
@@ -129,10 +129,10 @@
         <div class="container courses__container">
             <article class="course">
                 <div class="course__image">
-                    <img src="./images/course1.jpg" alt="">
+                    <img src="./images/print1.jpg" alt="">
                 </div>
                 <div class="course__info">
-                    <h4>Responsive Social Media Website UI Design</h4>
+                    <h4>손도면에서 평면도로 변환</h4>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus doloremque
                         quae velit, facilis reiciendis excepturi.
@@ -143,10 +143,10 @@
 
             <article class="course">
                 <div class="course__image">
-                    <img src="./images/course2.jpg" alt="">
+                    <img src="./images/print2.jpg" alt="">
                 </div>
                 <div class="course__info">
-                    <h4>Responsive Education Design</h4>
+                    <h4>평면도 변환 알고리즘</h4>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus doloremque
                         quae velit, facilis reiciendis excepturi.
@@ -157,10 +157,10 @@
 
             <article class="course">
                 <div class="course__image">
-                    <img src="./images/course3.jpg" alt="">
+                    <img src="./images/print3.jpg" alt="">
                 </div>
                 <div class="course__info">
-                    <h4>Responsive Admin Markup</h4>
+                    <h4>배치도 변환 알고리즘</h4>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus doloremque
                         quae velit, facilis reiciendis excepturi.
