--- a/projects/ToyProjects/education/index.html
+++ b/projects/ToyProjects/education/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education/School Multipage Website Tutorial - KHAKHID</title>
+    <title>SOLIDRAW 솔리드로우 초안</title>
 
     <!-- ICONSCOUT CDN -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -129,13 +129,14 @@
         <div class="container courses__container">
             <article class="course">
                 <div class="course__image">
-                    <img src="./images/print1.jpg" alt="">
+                    <img src="./images/print0.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>손도면에서 평면도로 변환</h4>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus doloremque
                         quae velit, facilis reiciendis excepturi.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
                     <a href="course.html" class="btn btn-primary">자세히 보기</a>
                 </div>
@@ -143,7 +144,7 @@
 
             <article class="course">
                 <div class="course__image">
-                    <img src="./images/print2.jpg" alt="">
+                    <img src="./images/print1.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>평면도 변환 알고리즘</h4>
@@ -157,13 +158,14 @@
 
             <article class="course">
                 <div class="course__image">
-                    <img src="./images/print3.jpg" alt="">
+                    <img src="./images/print2.jpg" alt="">
                 </div>
                 <div class="course__info">
                     <h4>배치도 변환 알고리즘</h4>
                     <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus doloremque
                         quae velit, facilis reiciendis excepturi.
+                        Lorem ipsum dolor sit amet consectetur.
                     </p>
                     <a href="course.html" class="btn btn-primary">자세히 보기</a>
                 </div>
@@ -244,7 +246,7 @@
             <article class="faq">
                 <div class="faq__icon"><i class="uil uil-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me?</h4>
+                    <h4>손도면에 작성된 수치를 나오게 할 수 있나요?</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod vel quis perferendis
                         porro excepturi eum sint esse enim, cupiditate quam minima consectetur repellat rerum
@@ -255,7 +257,7 @@
             <article class="faq">
                 <div class="faq__icon"><i class="uil uil-plus"></i></div>
                 <div class="question__answer">
-                    <h4>How do I know the right courses for me?</h4>
+                    <h4>인터넷이 연결되지 않았을 때도 사용하고 싶어요!</h4>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quod vel quis perferendis
                         porro excepturi eum sint esse enim, cupiditate quam minima consectetur repellat rerum
@@ -268,7 +270,7 @@
     <!-- ====================== END OF QNA ===================== -->
 
     <section class="container testimonials__container mySwiper">
-        <h2>직접듣는 사용 후기</h2>
+        <h2>사용 후기</h2>
         <div class="swiper-wrapper">
             <article class="testimonial swiper-slide">
                 <div class="avatar">
