--- a/projects/ToyProjects/responsive-real-state-website-main/index.html
+++ b/projects/ToyProjects/responsive-real-state-website-main/index.html
@@ -147,9 +147,9 @@
                     </h2>
                 </div>
 
-                <div class="popular__container">
-                    <div>
-                        <article class="popular__card">
+                <div class="popular__container swiper">
+                    <div class="swiper-wrapper">
+                        <article class="popular__card swiper-slide">
                             <img src="assets/img/popular1.jpg" alt="" class="popular__img">
                             <div class="popular__data">
                                 <h2 class="popular__price">
@@ -164,7 +164,7 @@
                                 </p>
                             </div>
                         </article>
-                        <article class="popular__card">
+                        <article class="popular__card swiper-slide">
                             <img src="assets/img/popular2.jpg" alt="" class="popular__img">
                             <div class="popular__data">
                                 <h2 class="popular__price">
@@ -179,7 +179,7 @@
                                 </p>
                             </div>
                         </article>
-                        <article class="popular__card">
+                        <article class="popular__card swiper-slide">
                             <img src="assets/img/popular3.jpg" alt="" class="popular__img">
                             <div class="popular__data">
                                 <h2 class="popular__price">
@@ -194,7 +194,7 @@
                                 </p>
                             </div>
                         </article>
-                        <article class="popular__card">
+                        <article class="popular__card swiper-slide">
                             <img src="assets/img/popular4.jpg" alt="" class="popular__img">
                             <div class="popular__data">
                                 <h2 class="popular__price">
@@ -209,7 +209,7 @@
                                 </p>
                             </div>
                         </article>
-                        <article class="popular__card">
+                        <article class="popular__card swiper-slide">
                             <img src="assets/img/popular5.jpg" alt="" class="popular__img">
                             <div class="popular__data">
                                 <h2 class="popular__price">
@@ -225,17 +225,186 @@
                             </div>
                         </article>
                     </div>
+                    <div class="swiper-button-next">
+                        <i class="bx bx-chevron-right"></i>
+                    </div>
+                    <div class="swiper-button-prev">
+                        <i class="bx bx-chevron-left"></i>
+                    </div>
                 </div>
             </section>
 
             <!--==================== VALUE ====================-->
             <section class="value section" id="value">
-                
+                <div class="value__container container grid">
+                    <div class="value__images">
+                        <div class="value__orbe"></div>
+                        <div class="value__img">
+                            <img src="assets/img/value.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="value__content">
+                        <div class="value__data">
+                            <span class="section__subtitle">Our Value</span>
+                            <h2 class="section__title">Value We Give To You<span>.</span></h2>
+                            <p class="value__description">
+                                We always ready to help by providing the best service for you. 
+                                We believe a good place to live can make your life better.
+                            </p>
+                        </div>
+
+                        <div class="value__accordion">
+                            <div class="value__accordion-item">
+                                <header class="value__accordion-header">
+                                    <i class="bx bxs-shield-x value__accordion-icon"></i>
+                                    <h3 class="value__accordion-title">
+                                        Best interest rates on the market
+                                    </h3>
+                                    <div class="value__accordion-arrow">
+                                        <i class="bx bxs-down-arrow"></i>
+                                    </div>
+                                </header>
+                                <div class="value__accordion-content">
+                                    <p class="value__accordion-description">
+                                        Price we provides is the best for you, 
+                                        we guarantee no price changes on your property due 
+                                        to various unexpected costs that may come.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="value__accordion-item">
+                                <header class="value__accordion-header">
+                                    <i class="bx bxs-x-square value__accordion-icon"></i>
+                                    <h3 class="value__accordion-title">
+                                        Prevent unstable prices
+                                    </h3>
+                                    <div class="value__accordion-arrow">
+                                        <i class="bx bxs-down-arrow"></i>
+                                    </div>
+                                </header>
+                                <div class="value__accordion-content">
+                                    <p class="value__accordion-description">
+                                        Price we provides is the best for you, 
+                                        we guarantee no price changes on your property due 
+                                        to various unexpected costs that may come.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="value__accordion-item">
+                                <header class="value__accordion-header">
+                                    <i class="bx bxs-bar-chart-square value__accordion-icon"></i>
+                                    <h3 class="value__accordion-title">
+                                        Best prices on the market
+                                    </h3>
+                                    <div class="value__accordion-arrow">
+                                        <i class="bx bxs-down-arrow"></i>
+                                    </div>
+                                </header>
+                                <div class="value__accordion-content">
+                                    <p class="value__accordion-description">
+                                        Price we provides is the best for you, 
+                                        we guarantee no price changes on your property due 
+                                        to various unexpected costs that may come.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="value__accordion-item">
+                                <header class="value__accordion-header">
+                                    <i class="bx bxs-check-square value__accordion-icon"></i>
+                                    <h3 class="value__accordion-title">
+                                        Security of your data
+                                    </h3>
+                                    <div class="value__accordion-arrow">
+                                        <i class="bx bxs-down-arrow"></i>
+                                    </div>
+                                </header>
+                                <div class="value__accordion-content">
+                                    <p class="value__accordion-description">
+                                        Price we provides is the best for you, 
+                                        we guarantee no price changes on your property due 
+                                        to various unexpected costs that may come.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== CONTACT ====================-->
             <section class="contact section" id="contact">
+                <div class="contact__container container grid">
+                    <div class="contact__images">
+                        <div class="contact__orbe"></div>
+
+                        <div class="contact__img">
+                            <img src="assets/img/contact.png" alt="">
+                        </div>
+                    </div>
                 
+                    <div class="contact__content">
+                        <div class="contact__data">
+                            <span class="section__subtitle">Contact Us</span>
+                            <h2 class="section__title">
+                                Easy to Contact us<span>.</span>
+                            </h2>
+                            <p class="contact__description">
+                                Is there a problem finding your dream home? Need a 
+                                guide in buying first home? or need a consultation 
+                                on residential issues? just contact us.
+                            </p>
+                        </div>
+                        <div class="contact__card">
+                            <div class="contact__card-box">
+                                <div class="contact__card-info">
+                                    <i class="bx bxs-phone-call"></i>
+                                    <div>
+                                        <h3 class="contact__card-title">Call</h3>
+                                        <p class="contact__card-description">022.321.165.19</p>
+                                    </div>
+                                </div>
+                                <button class="button contact__card-button">Call Now</button>
+                            </div>
+
+                            <div class="contact__card-box">
+                                <div class="contact__card-info">
+                                    <i class="bx bxs-message-rounded-dots"></i>
+                                    <div>
+                                        <h3 class="contact__card-title">Chat</h3>
+                                        <p class="contact__card-description">022.321.165.1</p>
+                                    </div>
+                                </div>
+                                <button class="button contact__card-button">Chat Now</button>
+                            </div>
+
+                            <div class="contact__card-box">
+                                <div class="contact__card-info">
+                                    <i class="bx bxs-video"></i>
+                                    <div>
+                                        <h3 class="contact__card-title">Video Call</h3>
+                                        <p class="contact__card-description">
+                                            022.321.165.19
+                                        </p>
+                                    </div>
+                                </div>
+                                <button class="button contact__card-button">Video Call Now</button>
+                            </div>
+
+                            <div class="contact__card-box">
+                                <div class="contact__card-info">
+                                    <i class="bx bxs-envelope"></i>
+                                    <div>
+                                        <h3 class="contact__card-title">Message</h3>
+                                        <p class="contact__card-description">
+                                            022.321.165.19
+                                        </p>
+                                    </div>
+                                </div>
+                                <button class="button contact__card-button">Message Now</button>
+                            </div>
+                        </div>
+                   </div>
+              </div>
             </section>
 
             <!--==================== SUBSCRIBE ====================-->
