--- a/projects/ToyProjects/responsive-real-state-website-main/index.html
+++ b/projects/ToyProjects/responsive-real-state-website-main/index.html
@@ -54,7 +54,8 @@
                         </li>
                     </ul>
                 </div>
-
+                <!-- Theme change button -->
+                <i class="bx bx-moon change-theme" id="theme-button"></i>
                 <a href="#" class="button nav__button">
                     Subscribe
                 </a>
@@ -427,7 +428,16 @@
         <!--==================== FOOTER ====================-->
         <footer class="footer section">
             <div class="footer__container container grid">
-                <div>
+                <!-- <div class="footer__content">
+                    <h3 class="footer__title">Our information</h3>
+
+                    <ul class="footer__list">
+                        <li>1234 - Peru</li>
+                        <li>La Libertad 43210</li>
+                        <li>123-456-789</li>
+                    </ul>
+                </div> -->
+                <!-- <div class="footer__content">
                     <a href="#" class="footer__logo">
                         Solidraw <i class="bx bxs-transfer-alt"></i>
                     </a>
@@ -435,7 +445,7 @@
                         Lorem ipsum dolor sit amet consectetur elit.
                         Enim odit consequatur eos, accusantium.
                     </p>
-                </div>
+                </div> -->
 
                 <div class="footer__content">
                     <div>
@@ -514,9 +524,10 @@
             </div>
         </footer>
 
-
         <!--========== SCROLL UP ==========-->
-
+        <a href="#" class="scrollup" id="scroll-up">
+            <i class="bx bx-chevrons-up"></i>
+        </a>        
 
         <!--=============== SCROLLREVEAL ===============-->
         <script src="assets/js/scrollreveal.min.js"></script>
