--- a/projects/ToyProjects/responsive-real-state-website-main/index.html
+++ b/projects/ToyProjects/responsive-real-state-website-main/index.html
@@ -154,7 +154,7 @@
                 <div class="popular__container swiper">
                     <div class="swiper-wrapper">
                         <article class="popular__card swiper-slide">
-                            <img src="assets/img/popular1.jpg" alt="" class="popular__img">
+                            <img src="assets/img/guide_1.png" alt="" class="popular__img">
                             <div class="popular__data">
                                 <h2 class="popular__price">
                                     Step <span>1</span>
@@ -163,7 +163,7 @@
                                     이미지 업로드
                                 </h3>
                                 <p class="popular__description">
-                                    변환할 손 스케치 도면 파일을 업로드합니다.
+                                    파일 선택 버튼을 눌러 변환할 손 스케치 도면 파일을 업로드합니다.
                                 </p>
                             </div>
                         </article>
@@ -256,7 +256,7 @@
                                 <header class="value__accordion-header">
                                     <i class="bx bxs-coin-stack value__accordion-icon"></i>
                                     <h3 class="value__accordion-title">
-                                        완전한 무료 서비스를 지향
+                                        완전한 무료 서비스 지향
                                     </h3>
                                     <div class="value__accordion-arrow">
                                         <i class="bx bxs-down-arrow"></i>
