--- a/projects/ToyProjects/responsive-real-state-website-main/index.html
+++ b/projects/ToyProjects/responsive-real-state-website-main/index.html
@@ -89,6 +89,7 @@
                             <div>
                                 <h1 class="home__value-number">
                                     9K<span>+</span>
+                                    <div class="count_num"></div>
                                 </h1>
                                 <span class="home__value-description">
                                     변환된 <br> 파일
@@ -96,18 +97,18 @@
                             </div>
                             <div>
                                 <h1 class="home__value-number">
-                                    2K<span>+</span>
+                                    100<span>+</span>
                                 </h1>
                                 <span class="home__value-description">
-                                    구독 &<br>좋아요
+                                    개같은<br>커밋 수
                                 </span>
                             </div>
                             <div>
                                 <h1 class="home__value-number">
-                                    10<span>+</span>
+                                    1<span>+</span>
                                 </h1>
                                 <span class="home__value-description">
-                                    캡스톤디자인 <br> 프로젝트
+                                    어워드 <br> 우승
                                 </span>
                             </div>
                         </div>
