--- a/projects/ToyProjects/responsive-real-state-website-main/index.html
+++ b/projects/ToyProjects/responsive-real-state-website-main/index.html
@@ -145,7 +145,7 @@
             <section class="popular section" id="popular">
                 <div class="container">
                     <span class="section__subtitle">
-                        가이드
+                        사용 가이드
                     </span>
                     <h2 class="section__title">
                         Guide<span>.</span>
