--- a/projects/ToyProjects/responsive-real-state-website-main/index.html
+++ b/projects/ToyProjects/responsive-real-state-website-main/index.html
@@ -220,7 +220,7 @@
                                     평가하기
                                 </h3>
                                 <p class="popular__description">
-                                    완성 도면 결과에 평점을 매겨주세요!
+                                    완성 도면 결과에 평점을 매겨주세요.
                                 </p>
                             </div>
                         </article>
