--- a/projects/ToyProjects/responsive-real-state-website-main/index.html
+++ b/projects/ToyProjects/responsive-real-state-website-main/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="assets/css/screen.css">
         <link rel="stylesheet" href="assets/css/darktheme.css">
         <link rel="stylesheet" href="assets/css/upload.css">
+        <link rel="stylesheet" href="assets/css/uploaded.css">
         <title>SOLIDRAW - Applied NEW Design Templates</title>
     </head>
     <body>
@@ -84,6 +85,12 @@
                             <label class="button" for="chooseFile" id="upload__button">파일선택</label>
                             <input type="file" id="chooseFile" name="chooseFile" accept="image/*" onchange="loadFile(this)">
                         </form>
+                        <div class="uploaded">
+                            <div class="uploaded_image"></div>
+                            <label for="" class="convert_btn button">
+                                변환하기
+                            </label>
+                        </div>                        
                         <div class="image-show" id="image-show"></div>
                         <div class="home__value">
                             <div>
