--- a/JS_practice/axios-practice/index.html
+++ b/JS_practice/axios-practice/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Search</h1>
+    <h1>Search Form</h1>
     <form id="searchForm">
-        <input type="text" placeholder="TV Show Title" name="query">
+        <input type="text" placeholder="Search name" name="query">
         <button>Search</button>
     </form>
+    <div id="imgBox"></div>
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
